@@ -179,7 +179,8 @@ namespace UIExtensions.Features
                 }
                 else
                 {
-                    throw new Exception($"Failed to patch '{MethodBase.GetCurrentMethod().DeclaringType}'");
+                    Core.FailedToPatch(MethodBase.GetCurrentMethod());
+                    return codes;
                 }
             }
 
